# skygo

./: README.md
c++/client++/: CMakeLists.txt  client++.cpp  skywire.grpc.pb.cc  skywire.grpc.pb.h  skywire.pb.cc  skywire.pb.h
client/: client.go
proto/: skywire.pb.go  skywire.proto
server/: server.go
